<resources>
    <!--   App  Name   -->
    <string name="app_name">SocialQs</string>

    <!--   KEYS   -->
    <string name="facebook_app_id">757408744896556</string>
    <string name="fb_login_protocol_scheme">fb757408744896556</string>

    <!--   TAGS   -->
    <string name="login_fragment">login_fragment</string>

    <!--   Titles   -->
    <string name="title_home">Home</string>
    <string name="title_following">Following</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_answers">Answers</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_video_source">Choose Video Source</string>
    <string name="title_login">Login</string>
    <string name="title_question">Question</string>

    <!--   Strings   -->
    <string name="invalid_email">Email address is incorrect</string>
    <string name="password_short">Your password needs to be at least 8 characters</string>
    <string name="something_wrong">Something went wrong. Try again!</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="login_button">LOGIN</string>
    <string name="okay">Okay</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="or">or</string>
    <string name="explore"><u>Explore</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Full Name</string>
    <string name="note">Note:</string>
    <string name="agree_our_terms">By creating an account, you agree to our</string>
    <string name="terms">Terms</string>
    <string name="already_account">Already have an account?</string>
    <string name="login_small">Login</string>
    <string name="name_error">Your name seems incorrect!</string>
    <string name="fb_no_email">Unable to fetch your email! Navigating to Sign up to manually verify email. Please use this email to login, unfortunately facebook login will not work by just tapping the button.</string>

    <string name="verify_email">Verify Your Email</string>
    <string name="verify_forgot_pass_text">We have sent you an email with the code. Please enter it to verify your email!</string>
    <string name="code_sent">We have sent you an email with the code. Please enter it to complete Sign Up!</string>
    <string name="resend_code">Resend Code</string>
    <string name="confirm">Confirm</string>
    <string name="do_it">or do it</string>
    <string name="later">later</string>

    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_info">You will receive an email with more information on how to proceed</string>

    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_not_equal">Passwords do not match</string>
    <string name="password_updated">Password has been changed.</string>

    <string name="search">Search SocialQ\'s...</string>
    <string name="likes"> Like(s)</string>
    <string name="dislikes"> Dislike(s)</string>
    <string name="no_answers">No answers yet</string>
    <string name="correct_answer">Correct</string>
    <string name="questionmark">\?</string>
    <string name="no_questions">No questions yet</string>
    <string name="no_bookmark">No questions bookmarked</string>
    <string name="no_questions_extra">Start asking questions!</string>
    <string name="delete_answer">Delete Answer</string>
    <string name="delete_answer_warning">Are you sure you want to delete your answer?</string>
    <string name="bookmark_question">Question is bookmarked</string>
    <string name="unbookmark_question">Bookmark has been removed</string>

    <string name="read_more"><u>Read More</u></string>
    <string name="read_less"><u>Read Less</u></string>
    <string name="delete_notification_text">Notification was deleted!</string>
    <string name="undo_delete">UNDO</string>
    <string name="no_notifications">You currently have no notifications!</string>
    <string name="title_delete">Delete</string>
    <string name="delete_notifications">Delete All Notifications</string>
    <string name="delete_all_notification_warning">Are you sure you want to permanently delete all your notifications?</string>
    <string name="cancel">Cancel</string>

    <string name="gallery_pick">Upload from Gallery</string>
    <string name="record">Record Video</string>

    <string name="title_heading">What would you like to know?</string>
    <string name="title_hint">Hint: Try keep the question as broad as possible so other members can help answer it</string>
    <string name="title_description">Question</string>
    <string name="category_heading">What category does the question belong to?</string>
    <string name="category_hint">Hint: Choose as accurately as possible for other members the see your question</string>
    <string name="category_description">Category</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logout_message">Are you sure you want to log out?</string>

    <string name="bookmarked">Bookmarked</string>
    <string name="my_questions">My Questions</string>
    <string name="delete_question">Delete Question</string>
    <string name="delete_question_warning">Are you sure you want to permanently delete this question?</string>

</resources>