<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotationY="-180"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/proceed"
            app:layout_constraintHorizontal_bias="0.002"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/titleHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.03"
        android:text="@string/title_heading"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/titleHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="13sp"
        android:text="@string/title_hint"
        android:textSize="14sp"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="100dp"
        android:hint="@string/title_description"
        android:inputType="textLongMessage"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/categoryHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/category_heading"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/categoryHint"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="13sp"
        android:text="@string/category_hint"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:dropDownWidth="200dp"
        android:dropDownSelector="@color/black"
        android:prompt="@string/category_description"
        android:text="@string/category_description"/>

</LinearLayout>
