<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.socialqs.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_following"
        android:name="com.example.socialqs.ui.following.FollowingFragment"
        android:label="@string/title_following"
        tools:layout="@layout/fragment_following" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.socialqs.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" >
        <action
            android:id="@+id/action_navigation_create_to_videoFragment"
            app:destination="@id/videoFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.socialqs.ui.notifications.NotificationsFragment"
        android:label="change"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/videoFragment"
        android:name="com.example.socialqs.ui.create.VideoFragment"
        android:label="fragment_video"
        tools:layout="@layout/fragment_video" />


</navigation>